# otus

./: CMakeLists.txt  config.h.in  hello_test.cc  lib.h  main.cpp  test.txt  test_version.cpp  utils.h
.github/workflow/: one.yaml
.github/workflows/: lesson.yaml  main.yml
1/: lib.cpp  test_version.cpp
